Added two new functions
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@167000 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
-* array-walk-recursive
+* array_walk_recursive
 * array_uintersect_assoc
 * array_uintersect_uassoc
+* array_uintersect
+* array_udiff_uassoc
 * convert_uuencode
 * convert_uudecode
 * loadVersion in main class
