Prepare for 1.5.0 release
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@202098 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/TODO
+++ b/TODO
@@ -21,8 +21,6 @@ Tests
   mime_content_type
   is_scalar
   property_exists
-  inet_pton
-  inet_ntop
 
 Other
 =====
@@ -34,7 +32,7 @@ Other
   register_globals=on/off
   magic_quotes=on/off
 
-* Add class for functions with changed parameters
+* Handle functions with changed signatures
   microtime
   str_ireplace
   range
