Reflect major changes
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@203883 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/TODO
+++ b/TODO
@@ -21,20 +21,13 @@ Tests
   mime_content_type
   is_scalar
   property_exists
+  mkdir
+  microtime
+  array_slice
+  range
 
 Other
 =====
 * Extensions
   SPL
   FTP
-
-* Enviroments
-  register_globals=on/off
-  magic_quotes=on/off
-
-* Handle functions with changed signatures
-  microtime
-  str_ireplace
-  range
-  array_splice
-  mkdirr
